--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,6 @@ h1{
 }
 
 .input-section{
-
 	background-color: #E5E5E5;
 	padding: 5%;
 }
@@ -37,3 +36,30 @@ input[type="texte"].error{
 	padding: 1%;
 }
 
+li{
+	width: 80%;
+	align-content: center;
+	background-color: #1A998C;
+	color: white;
+	margin: 1%;
+	border-radius: 10px;
+	padding: 1%;
+	
+}
+
+a{
+	text-decoration: none;
+	color: white;
+}
+a:hover{
+	text-decoration: line-through;
+	color: #FA8667;
+}
+li input{
+	float: left;
+	margin: 2%;
+}
+li i{
+	float: right;
+	margin-left: 2%;
+}
